0.1-rest : add failsafe && surefire